--- a/app/src/main/res/layout/dialog_stack_actions.xml
+++ b/app/src/main/res/layout/dialog_stack_actions.xml
@@ -96,6 +96,7 @@
 
                 <!-- EDIT CARDS -->
                 <LinearLayout
+                    android:id="@+id/edit_stack_action"
                     android:background="?attr/selectableItemBackground"
                     android:clickable="true"
                     android:padding="10dp"
