Slick on stack opens it, dialog template to add cards to stack

--- a/app/src/main/res/layout/activity_stack_list.xml
+++ b/app/src/main/res/layout/activity_stack_list.xml
@@ -119,6 +119,7 @@
             android:paddingBottom="230dp"
             android:layoutAnimation = "@anim/a_list_item_animation"
             android:clipToPadding="false"
+            android:descendantFocusability="blocksDescendants"
             android:scrollbarStyle="outsideOverlay">
         </ListView>
 
