--- a/app/src/main/res/layout/activity_stack.xml
+++ b/app/src/main/res/layout/activity_stack.xml
@@ -50,7 +50,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:text="Hello, Friend"
+                    tools:text="Hello, Friend"
                     android:textAllCaps="true"
                     android:textColor="@color/colorPrimary"
                     android:textSize="20sp"
