--- a/app/src/main/res/layout/item_stack.xml
+++ b/app/src/main/res/layout/item_stack.xml
@@ -7,9 +7,11 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:clickable="false">
 
         <RelativeLayout
+            android:clickable="false"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="20dp"
