Added cards to stack activity with list of cards, implementation of adding and deleting card, animations on lists on adding and updating item

--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -128,7 +128,7 @@
                     android:layout_height="60dp"
                     android:background="@drawable/button_rounded"
                     android:padding="15dp"
-                    android:text="Edit stacks"
+                    android:text="Stacks"
                     android:textAllCaps="true"
                     android:textColor="@color/mainBlue"
                     android:layout_marginBottom="15dp"
