--- a/app/src/main/res/layout/activity_stack.xml
+++ b/app/src/main/res/layout/activity_stack.xml
@@ -52,7 +52,7 @@
                     android:layout_gravity="center_vertical"
                     tools:text="Hello, Friend"
                     android:textAllCaps="true"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/mainWhite"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -71,25 +71,23 @@
                 <!-- FRONT LANGUAGE -->
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/front_lang_icon"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:clickable="true"
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
                     android:layout_marginEnd="10dp"
                     android:layout_marginRight="10dp"
-                    app:civ_border_color="#ddd"
-                    app:civ_border_overlay="true"
-                    app:civ_border_width="2dp"
-                    tools:src="@drawable/flag_en" />
+                    android:src="@drawable/c_magnify_white"/>
 
                 <!-- BACK LANGUAGE -->
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/back_lang_icon"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:clickable="true"
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
                     android:layout_toRightOf="@id/front_lang_icon"
-                    app:civ_border_color="#ddd"
-                    app:civ_border_overlay="true"
-                    app:civ_border_width="2dp"
-                    tools:src="@drawable/flag_fr" />
+                    android:src="@drawable/c_volume_white"/>
 
             </LinearLayout>
 
@@ -116,40 +114,13 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <!-- SEARCH LAYOUT -->
-            <LinearLayout
-                android:focusableInTouchMode="true"
-                android:layout_width="match_parent"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:layout_height="50dp"
-                android:orientation="horizontal"
-                android:paddingTop="5dp"
-                android:paddingBottom="5dp">
-
-                <ImageView
-                    android:layout_gravity="center_vertical"
-                    android:layout_width="23dp"
-                    android:layout_height="23dp"
-                    android:src="@drawable/c_magnify_blue" />
-
-                <EditText
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
-                    android:textSize="18sp"
-                    android:hint="Search"
-                    android:textColorHint="@color/mainBlue"
-                    android:textColor="@color/mainBlue"
-                    android:layout_height="wrap_content" />
-
-            </LinearLayout>
-
             <!-- CARD LIST -->
             <ListView
                 android:paddingTop="20dp"
                 android:id="@+id/card_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layoutAnimation = "@anim/layout_anim_item_slide_very_fast"
                 tools:listitem="@layout/item_card"
                 android:paddingBottom="230dp"
                 android:clipToPadding="false"
@@ -172,7 +143,7 @@
 
         <!-- ADD CARD BUTTON -->
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/add_card_button"
+            android:id="@+id/save_card_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
