--- a/app/src/main/res/layout/dialog_stack_edit.xml
+++ b/app/src/main/res/layout/dialog_stack_edit.xml
@@ -31,7 +31,7 @@
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Rename stack"
+                    android:text="New stack"
                     android:ellipsize="end"
                     android:maxLines="1"
                     android:textAllCaps="true"
@@ -63,7 +63,8 @@
                 <LinearLayout
                     android:id="@+id/stack_name_layout"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:focusableInTouchMode="true">
 
                     <android.support.design.widget.TextInputLayout
                         android:textColorHint="@color/mainBlue"
@@ -110,10 +111,10 @@
                     <TextView
                         android:background="?attr/selectableItemBackgroundBorderless"
                         android:clickable="true"
-                        android:id="@+id/rename_stack_button"
+                        android:id="@+id/save_stack_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Rename"
+                        android:text="Save"
                         android:paddingTop="10dp"
                         android:paddingBottom="10dp"
                         android:paddingRight="5dp"
