--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#eee</color>
-    <color name="colorPrimaryDark">#323e58</color>
+    <color name="colorPrimary">@color/mainBlue</color>
+    <color name="colorPrimaryDark">@color/mainBlueDark</color>
     <color name="colorAccent">@color/mainBlue</color>
 
     <color name="mainBlue">#425273</color>
+    <color name="mainBlueDark">#323e58</color>
+    <color name="mainWhite">#eee</color>
 </resources>
