--- a/app/src/main/res/layout/dialog_card_edit.xml
+++ b/app/src/main/res/layout/dialog_card_edit.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:id="@+id/root_layout"
@@ -90,15 +89,14 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
-                        <EditText
+                        <android.support.design.widget.TextInputEditText
                             android:id="@+id/front_lang_text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textColor="@color/mainBlue"
                             android:inputType="textCapSentences"
                             android:textColorHint="@color/mainBlue"
-                            tools:text="Good morning"
-                            android:hint="Word" />
+                            android:hint="Word"/>
 
                     </android.support.design.widget.TextInputLayout>
 
@@ -130,14 +128,13 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
-                        <EditText
+                        <android.support.design.widget.TextInputEditText
                             android:id="@+id/back_lang_text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textColor="@color/mainBlue"
                             android:inputType="textCapSentences"
                             android:textColorHint="@color/mainBlue"
-                            tools:text="Guten Tag"
                             android:hint="Translation" />
 
                     </android.support.design.widget.TextInputLayout>
