--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
@@ -18,6 +18,10 @@
 
         <LinearLayout
             android:gravity="center_vertical"
+            android:paddingLeft="0dp"
+            android:paddingStart="0dp"
+            android:paddingRight="5dp"
+            android:paddingEnd="5dp"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:orientation="horizontal"
@@ -46,6 +50,10 @@
         </LinearLayout>
 
         <LinearLayout
+            android:paddingLeft="5dp"
+            android:paddingStart="5dp"
+            android:paddingRight="0dp"
+            android:paddingEnd="0dp"
             android:gravity="center_vertical"
             android:layout_weight="1"
             android:layout_width="0dp"
@@ -75,11 +83,6 @@
         </LinearLayout>
 
     </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="@color/mainBlue" />
 
 </LinearLayout>
 
