--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -30,6 +30,7 @@
 
             <!-- FRONT LANGUAGE -->
             <de.hdodenhof.circleimageview.CircleImageView
+                android:alpha="0.8"
                 android:id="@+id/front_lang_icon"
                 android:layout_width="22dp"
                 android:layout_height="22dp"
@@ -38,7 +39,7 @@
                 android:src="@drawable/flag_en"
                 app:civ_border_color="@color/mainBlue"
                 app:civ_border_overlay="true"
-                app:civ_border_width="0.2dp" />
+                app:civ_border_width="1.2dp" />
 
             <TextView
                 android:id="@+id/front_lang_text"
@@ -63,6 +64,7 @@
 
             <!-- FRONT LANGUAGE -->
             <de.hdodenhof.circleimageview.CircleImageView
+                android:alpha="0.8"
                 android:id="@+id/back_lang_icon"
                 android:layout_width="22dp"
                 android:layout_height="22dp"
@@ -71,7 +73,7 @@
                 android:src="@drawable/flag_fr"
                 app:civ_border_color="@color/mainBlue"
                 app:civ_border_overlay="true"
-                app:civ_border_width="0.2dp" />
+                app:civ_border_width="1.2dp" />
 
             <TextView
                 android:id="@+id/back_lang_text"
