--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -1,41 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="?android:attr/selectableItemBackground"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:baselineAligned="false"
         android:orientation="horizontal"
-        android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:baselineAligned="false">
+        android:paddingTop="10dp">
 
         <LinearLayout
-            android:gravity="center_vertical"
-            android:paddingLeft="0dp"
-            android:paddingStart="0dp"
-            android:paddingRight="5dp"
-            android:paddingEnd="5dp"
-            android:layout_weight="1"
             android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:layout_height="match_parent">
+            android:paddingEnd="5dp"
+            android:paddingLeft="0dp"
+            android:paddingRight="5dp"
+            android:paddingStart="0dp">
 
             <!-- FRONT LANGUAGE -->
             <de.hdodenhof.circleimageview.CircleImageView
-                android:alpha="0.8"
                 android:id="@+id/front_lang_icon"
                 android:layout_width="22dp"
                 android:layout_height="22dp"
-                android:layout_marginRight="10dp"
                 android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
                 android:src="@drawable/flag_en"
                 app:civ_border_color="@color/mainBlue"
                 app:civ_border_overlay="true"
@@ -52,24 +51,24 @@
         </LinearLayout>
 
         <LinearLayout
-            android:paddingLeft="5dp"
-            android:paddingStart="5dp"
-            android:paddingRight="0dp"
-            android:paddingEnd="0dp"
-            android:gravity="center_vertical"
-            android:layout_weight="1"
             android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:layout_height="match_parent">
+            android:paddingEnd="0dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="0dp"
+            android:paddingStart="5dp">
 
             <!-- FRONT LANGUAGE -->
             <de.hdodenhof.circleimageview.CircleImageView
-                android:alpha="0.8"
                 android:id="@+id/back_lang_icon"
                 android:layout_width="22dp"
                 android:layout_height="22dp"
-                android:layout_marginRight="10dp"
                 android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
+                android:alpha="0.8"
                 android:src="@drawable/flag_fr"
                 app:civ_border_color="@color/mainBlue"
                 app:civ_border_overlay="true"
