--- a/app/src/main/res/layout/dialog_stack_actions.xml
+++ b/app/src/main/res/layout/dialog_stack_actions.xml
@@ -61,6 +61,7 @@
 
                 <!-- PRACTICE -->
                 <LinearLayout
+                    android:id="@+id/practice_stack_action"
                     android:background="?attr/selectableItemBackground"
                     android:clickable="true"
                     android:padding="10dp"
