--- a/app/src/main/res/layout/dialog_card_edit.xml
+++ b/app/src/main/res/layout/dialog_card_edit.xml
@@ -146,6 +146,8 @@
                     android:layout_height="wrap_content">
 
                     <CheckBox
+                        android:checked="true"
+                        android:id="@+id/auto_translate_checkbox"
                         android:layout_marginTop="2dp"
                         android:layout_marginLeft="32dp"
                         android:textColor="@color/mainBlue"
@@ -179,9 +181,9 @@
                         android:textSize="18sp" />
 
                     <TextView
+                        android:id="@+id/save_card_button"
                         android:background="?attr/selectableItemBackgroundBorderless"
                         android:clickable="true"
-                        android:id="@+id/save_card_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Save"
