--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -23,6 +23,8 @@
             android:layout_height="56dp"
             android:paddingLeft="18dp"
             android:paddingStart="18dp"
+            android:paddingRight="0dp"
+            android:paddingEnd="0dp"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             android:orientation="horizontal"
