--- a/app/src/main/res/layout/activity_stack_list.xml
+++ b/app/src/main/res/layout/activity_stack_list.xml
@@ -50,7 +50,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:text="Stacks"
+                    android:text="Edit Stacks"
                     android:textAllCaps="true"
                     android:textColor="@color/mainWhite"
                     android:textSize="20sp"
