--- a/app/src/main/res/layout/activity_stack.xml
+++ b/app/src/main/res/layout/activity_stack.xml
@@ -97,7 +97,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/cardview_dark_background" />
+            android:background="@color/mainBlueDark" />
 
     </LinearLayout>
 
