--- a/app/src/main/res/layout/activity_stack.xml
+++ b/app/src/main/res/layout/activity_stack.xml
@@ -62,32 +62,29 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginEnd="18dp"
-                android:layout_marginRight="18dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginEnd="10dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical|end"
                 android:orientation="horizontal">
 
-                <!-- SEARCH -->
                 <ImageView
-                    android:id="@+id/front_lang_icon"
+                    android:padding="7.5dp"
+                    android:id="@+id/search_button"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:clickable="true"
-                    android:layout_width="28dp"
-                    android:layout_height="28dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginRight="10dp"
-                    android:src="@drawable/c_magnify_white"/>
+                    android:src="@drawable/c_magnify_white" />
 
-                <!-- SOUND -->
                 <ImageView
-                    android:id="@+id/back_lang_icon"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:clickable="true"
-                    android:layout_width="28dp"
-                    android:layout_height="28dp"
-                    android:layout_toRightOf="@id/front_lang_icon"
-                    android:src="@drawable/c_volume_white"/>
+                    android:src="@drawable/c_volume_white"
+                    android:id="@+id/speak_button"
+                    android:padding="10dp"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp" />
 
             </LinearLayout>
 
