--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -4,32 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?android:attr/selectableItemBackground"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:baselineAligned="false"
-        android:orientation="horizontal"
-        android:paddingBottom="10dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:paddingTop="10dp">
+        android:orientation="horizontal">
 
         <LinearLayout
+            android:background="?android:attr/selectableItemBackground"
+            android:id="@+id/front_lang_layout"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:orientation="horizontal"
             android:paddingEnd="5dp"
-            android:paddingLeft="0dp"
+            android:paddingLeft="20dp"
             android:paddingRight="5dp"
-            android:paddingStart="0dp">
+            android:paddingStart="20dp"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp">
 
             <!-- FRONT LANGUAGE -->
             <de.hdodenhof.circleimageview.CircleImageView
+                android:background="?android:attr/selectableItemBackground"
                 android:id="@+id/front_lang_icon"
                 android:layout_width="22dp"
                 android:layout_height="22dp"
@@ -51,14 +51,16 @@
         </LinearLayout>
 
         <LinearLayout
+            android:background="?android:attr/selectableItemBackground"
+            android:id="@+id/back_lang_layout"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:paddingEnd="0dp"
+            android:paddingEnd="20dp"
             android:paddingLeft="5dp"
-            android:paddingRight="0dp"
+            android:paddingRight="20dp"
             android:paddingStart="5dp">
 
             <!-- BACK LANGUAGE -->
